2011-03-29  Ramon Casero  <ramon.casero@comlab.ox.ac.uk>

	* CMakeLists.txt: Add CMAKE_BUILD_TYPE variable so that the code
	is optimized for speed.

2011-03-19  Ramon Casero  <ramon.casero@comlab.ox.ac.uk>

	* third-party/mba/CMakeLists.txt:

	- Now libMBA.so is installed in matlab/PointsToolbox, so that it's
	in the same directory as the MEX function that makes use of it.

	* CMakeLists.txt:

	- Force the gcc and g++ compilers version to be 4.3. This is the
	version that Matlab currently requires, and we have to compile the
	libMBA library with the same version as the MEX file in the matlab
	directory.

2011-03-18  Ramon Casero  <ramon.casero@comlab.ox.ac.uk>

	* third-party/mba/include/UCButils.h,
	third-party/mba/src/UCButils.cpp:

	- Add UCBspl::printCSVgrid() method so that I can output the
	interpolated grid points to a CSV file that Matlab can read.

	* third-party/mba/CMakeLists.txt:

	- Remove dependencies to OpenGL, that were giving linking problems
	and don't seem to be necessary for mbaSurfaceInterpolation to run. 

	* Add MbaSurfaceInterpolation.cxx:

	- So far, I copied the example provided by the original MBA
	developers, and made some changes for a quick and dirty test of
	the interpolation code. It throws a segmentation fault if you try
	to interpolate outside the square that contains the grid.

2011-03-17  Ramon Casero  <ramon.casero@comlab.ox.ac.uk>

	* Rename third-party/mba/Makefile provided by original developers as
	third-party/mba/Makefile.orginal so that it doesn't interfere with
	files generated by cmake.

	* Add third-party/mba/CMakeLists.txt

	- So that we can use cmake to build the MBA library and integrate
	it with Gerardus, instead of the Makefile provided by the orginal
	developers.

	* Add third-party/mba

	- Directory with the MBA library (SINTEF Multilevel B-spline
	Approximation library - version 1.1), Copyright (C) 2000-2005
	SINTEF ICT, Applied Mathematics, Norway. GPL.

2011-02-18  Ramon Casero  <ramon.casero@comlab.ox.ac.uk>